--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import "@fontsource-variable/inter/index.css";
-@import "@fontsource-variable/plus-jakarta-sans/index.css";
+@import "@fontsource-variable/inter";
+@import "@fontsource-variable/plus-jakarta-sans";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
